xxxx-xx-xx    3.0.1
-------------------
   * FIXED ERRORS:
   * NEW ADDED:
      - Example25IsInstanceVsLenTuple
      - Example26IfVsTryGetDictValue.py
      - Example27FindDuplicates.py
      - Example28ListComprehensionVsGenerator.py
      
   * UPDATED, IMPROVEMENTS:
   * REMOVED:
   * DOCUMENTATION:
   * OTHER CHANGES:


2014-07-10    3.0.0
-------------------
   * Release v. 3.0.0


2014-05-15
-------------------
   * project start